Tue Nov 23 07:27:27 2010  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb (daynum): should be private.

Tue Nov 23 07:22:54 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ChangeLog (change-log-indent-text): hunging indent.

Tue Nov 23 06:30:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (SITE_DIR, VENDOR_DIR),
	  version.c (ruby_initial_load_paths): exclude directories that
	  are configured without them from $LOAD_PATH. [ruby-core:33267]

	* configure.in (rubylibprefix): No ruby, No libprefix.

Tue Nov 23 01:05:27 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* vsnprintf.c (BSD_vfprintf): don't output floating point
	  when the precision is 0. [ruby-dev:42615]

Mon Nov 22 21:30:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_inspect): fix for ascii-compatible external
	  encoding and different encoding string.  [ruby-core:33283]

Mon Nov 22 18:45:44 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): should not duplicate rules.
	  bug fix of r29842.

Mon Nov 22 18:04:40 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/big5.c: split CP950 from Big5.

	* enc/big5.c: split CP951 from Big5-HKSCS.

	* enc/trans/big5.trans: import conversion table of Big5, Big5-HKSCS,
	  CP950, and CP951 from ICU. they need fallback conversions.
	  ref [ruby-core:33256]
	  http://source.icu-project.org/repos/icu/data/trunk/charset/data/ucm/

	* tool/transcode-tblgen.rb (import_ucm): add to import ucm files.

Mon Nov 22 18:33:30 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_inspect): append for each chars instead of bulk
	  copy if encoding conversion is needed.  [ruby-core:33283]

Mon Nov 22 14:22:45 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* time.c (time_zone): use rb_locale_str_new_cstr to set encoding
	  as locale and convert its content to internal encoding.
	  [ruby-core:33278]

Mon Nov 22 11:58:11 2010  NARUSE, Yui  <naruse@ruby-lang.org>
