@@ -1,3 +1,7 @@
+Tue Nov 23 07:29:24 2010  Tadayoshi Funaba  <tadf@dotrb.org>
+
+	* complex.c, rational.c ({nucomp,nurat}_expt): added a check.
+
 Tue Nov 23 07:27:27 2010  Tadayoshi Funaba  <tadf@dotrb.org>
 
 	* lib/date.rb (daynum): should be private.
